--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>📘 The Code Magazine</h1>
+
+    <a href="blog.html">Blog</a>
+    <a href="#">Challenges</a>
+    <a href="#">Flexbox</a>
+    <a href="#">CSS Grid</a>
+
     <h2>The Basic Language of the Web: HTML</h2>
 
     <img src="laura-jones.jpg" alt="Headshot of Laura Jones" height="50" width="50"/>
@@ -41,8 +47,12 @@
         <li>The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
-        <li>You can learn more at the MDN Web Docs.</li>
     </ol>
+
+    <p>
+        You can learn more at the 
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs</a>.
+    </p>
 
     <h3>Why should you learn HTML?</h3>
     <p>
