--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>The Code Magazine</title>
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1>📘 The Code Magazine</h1>
         <nav>
             <a href="blog.html">Blog</a>
