--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <article>
+        <p>red</p>
         <header>
             <h2>The Basic Language of the Web: HTML</h2>
 
@@ -50,7 +51,7 @@
         </p>
         <p>In HTML, each element is made up of 3 parts:</p>
         <ol>
-            <li>The opening tag</li>
+            <li class="first-li">The opening tag</li>
             <li>The closing tag</li>
             <li>The actual element</li>
         </ol>
@@ -66,7 +67,7 @@
             Here are 5 of them:
         </p>
         <ul>
-            <li>To be able to use the fundamental web dev language</li>
+            <li class="first-li">To be able to use the fundamental web dev language</li>
             <li>To hand-craft beautiful websites instead of relying on tools like Worpress or Wix</li>
             <li>To build web applications</li>
             <li>To impress friends</li>
