--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     </header>
 
     <article>
-        <p>red</p>
         <header>
             <h2>The Basic Language of the Web: HTML</h2>
 
@@ -99,7 +98,7 @@
     </aside>
     
     <footer>
-        <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
+        <p id="copyright" class="copyright text">Copyright &copy; 2027 by The Code Magazine.</p>
     </footer>
 </body>
 </html>
