--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Code Magazine</title>
 </head>
 <body>
+    <div class="container">
     <header class="main-header">
         <h1>📘 The Code Magazine</h1>
         <nav>
@@ -100,5 +101,6 @@
     <footer>
         <p id="copyright" class="copyright text">Copyright &copy; 2027 by The Code Magazine.</p>
     </footer>
+    </div>
 </body>
 </html>
