--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <a href="blog.html">Blog</a>
             <a href="#">Challenges</a>
-            <a href="#">Flexbox</a>
-            <a href="#">CSS Grid</a>
+            <a href="flex-grid/flexbox.html">Flexbox</a>
+            <a href="flex-grid/css-grid.html">CSS Grid</a>
         </nav>
         <div class="clear"></div>
     </header>
