--- a/flex-grid/flexbox.html
+++ b/flex-grid/flexbox.html
@@ -42,7 +42,22 @@
         /* FLEXBOX */
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: flex-start;
+        gap: 31px;
+      }
+
+      .el--1{
+        align-self: flex-start;
+        /* order: 2; */
+      }
+
+      .el--5{
+        align-self: stretch;
+        order: 1;
+      }
+
+      .el--6{
+        order: -1;
       }
     </style>
   </head>
