--- a/flex-grid/flexbox.html
+++ b/flex-grid/flexbox.html
@@ -43,12 +43,26 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: 31px;
+        gap: 10px;
+      }
+
+      .el{
+        /* DEFAULTS
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; */
+
+        /* flex-basis: 200px; */
+        /* flex-shrink: 0;
+        flex-grow: 1; */
+
+        flex: 0 1 200px;
       }
 
       .el--1{
         align-self: flex-start;
         /* order: 2; */
+        /* flex-grow: 2; */
       }
 
       .el--5{
